# location_annotation_with_openstreetmap

./: LICENSE  README.md  package_demo.ipynb  pyproject.toml  setup.cfg  setup.py
osm_annotation/: geofabrik_database.py  osm_label_hierarchy.csv  osm_label_hierarchy_clean.csv  semantic_annotation.py
