[metadata]
# replace with your username:
name = osm_annotation
version = 0.1.4
author = Jixin Li
author_email = li.jix@northeastern.edu
description = An easy-to-use Python package that annotate location data with semantic labels from OpenStreetMap
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rexli999/location_annotation_with_openstreetmap
project_urls =
    Bug Tracker = https://github.com/rexli999/location_annotation_with_openstreetmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.7